# HydraEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Benchmark/: parallel.js  richards.js  round.js  sort-node.js  sort.js
HydraCompiler/: index.js  package.json
HydraCompiler/lib/: buffer-writer.js  bytecode.js  compiler.js  ir-builder.js  string-pool.js
HydraCompiler/test/: array.js  array_push.js  clouse.js  do_while.js  execute.js  exprs.js  for_loop.js  for_scope.js  functions.js  if.js  local_global.js  loop_after_if.js  new_class.js  other.js  property_access.js  property_access_write.js  proto.js  scope_test.js  semantic.js  simple.js  var_test.js
HydraCore/: CMakeLists.txt  Core.hpp  HydraCore.cpp
HydraCore/Common/: AutoCounter.h  CMakeLists.txt  ConcurrentLevelHashSet.h  ConcurrentLinkedList.h  ConcurrentQueue.h  Constexpr.h  HydraCore.cpp  HydraCore.h  Logger.cpp  Logger.h  Platform.cpp  Platform.h  Singleton.h  ThreadPool.cpp  ThreadPool.h
HydraCore/GarbageCollection/: CMakeLists.txt  GC.h  GCDefs.h  GCScheduler.cpp  GCScheduler.h  Heap.cpp  Heap.h  HeapObject.h  Region.cpp  Region.h  ThreadAllocator.cpp  ThreadAllocator.h
HydraCore/Runtime/: CMakeLists.txt  JSArray.cpp  JSArray.h  JSError.h  JSFunction.cpp  JSFunction.h  JSObject.cpp  JSObject.h  Klass.cpp  Klass.h  ManagedArray.cpp  ManagedArray.h  ManagedHashMap.h  RuntimeDefs.h  Semantic.cpp  Semantic.h  String.cpp  String.h  Type.cpp  Type.h
HydraCore/VirtualMachine/: ByteCode.cpp  ByteCode.h  CMakeLists.txt  Compile.cpp  Compile.h  CompiledFunction.cpp  CompiledFunction.h  IR.cpp  IR.h  IRInsts.cpp  IRInsts.h  Optimizer.cpp  Optimizer.h  Replacable.h  Scope.cpp  Scope.h  VM.cpp  VM.h  VMDefs.h
HydraEngine/: CMakeLists.txt  Main.cpp
HydraJsLib/: array.js  included.js  index.js
HydraOptimizer/: CMakeLists.txt  HydraOptimizer.cpp
Scripts/: Measure-PerfLog.ps1
Test/: CMakeLists.txt
Test/HydraCoreTest/: ByteCodeTest.cpp  CMakeLists.txt  Compare.js  CompareGCIntergratedTest.js  ConcurrentLevelHashSetTest.cpp  ConcurrentQueueTest.cpp  GCIntergretedTest.cpp  GCStopTheWorldTest.cpp  GCTest.cpp  JSArrayTest.cpp  JSObjectTest.cpp  KlassTest.cpp  ManagedArrayTest.cpp  ManagedHashMapTest.cpp  StringTest.cpp  TestHeapObject.h  ThreadPoolTest.cpp
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  assert.cpp  assert.hpp  common.hpp  encoding.hpp  exception.hpp  ptr.hpp  utility.hpp
lib/parser/: CMakeLists.txt
lib/runtime/: CMakeLists.txt  heap.hpp  memory.cpp  memory.hpp  value.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/common/: CMakeLists.txt  assert-test.cpp  encoding-test.cpp  ptr-test.cpp
test/runtime/: CMakeLists.txt  memory-test.cpp  value-test.cpp
