add_library(HydraCore.Runtime OBJECT
    JSArray.cpp
    JSArray.h
    JSError.cpp
    JSError.h
    JSFunction.cpp
    JSFunction.h
    JSObject.cpp
    JSObject.h
    Klass.cpp
    Klass.h
    ManagedArray.cpp
    ManagedArray.h
    ManagedHashMap.cpp
    ManagedHashMap.h
    RuntimeDefs.h
    Semantic.cpp
    Semantic.h
    String.cpp
    String.h
    Type.h
    Type.cpp
)
