add_library(HydraCore.VirtualMachine OBJECT
    ByteCode.cpp
    ByteCode.h
    Compile.cpp
    Compile.h
    CompiledFunction.cpp
    CompiledFunction.h
    IR.cpp
    IR.h
    IRInsts.cpp
    IRInsts.h
    Optimizer.cpp
    Optimizer.h
    Replacable.h
    Scope.cpp
    Scope.h
    VM.cpp
    VM.h
    VMDefs.h
)
